<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_white_fill_round_8">

        <TextView
            android:id="@+id/tv_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/confirm_request"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/tv_dialog_greatful_request"
            app:layout_constraintStart_toStartOf="@+id/tv_dialog_greatful_request"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dialog_greatful_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/greatful_request"
            android:textColor="@color/black_50555c"
            android:textSize="12dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_dialog_confirm"
            app:layout_constraintEnd_toEndOf="@+id/btn_dialog_confirm"
            app:layout_constraintStart_toStartOf="@+id/btn_dialog_confirm"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_confirm" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_confirm"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:padding="16dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:backgroundTint="@color/blue_3320a6"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dialog_greatful_request" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>