<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="topBarTxt"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.modify.ModifyActivity">

        <include
            android:id="@+id/topbar_modify"
            layout="@layout/topbar_with_back_btn"
            app:topBarTxt="@{topBarTxt}"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topbar_modify"
            app:srcCompat="@drawable/img_info_request" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:text="@string/modify_question"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/modify_apology"
            android:textColor="@color/black"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_modify_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/roboto_bold"
            android:padding="14dp"
            android:text="@string/modify_information"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_delete_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/blue_3320a6"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:padding="14dp"
            android:text="@string/delete_location"
            android:textColor="@color/blue_3320a6"
            android:textSize="15dp"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/blue_3320a6"
            app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>